--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Vantage</title>
     <link rel="stylesheet" href="/style.css">
     <script type="module" src="/index.js" defer></script>
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.png">
 </head>
 
 <body>
@@ -39,6 +40,9 @@
         </div>
         <div class="pair">
             <div class="box animate-left" style="width: 30%; height: fit-content; left: 40%;">
+                <img src="assets/img1.jpeg" alt="">
+            </div>
+            <div class="box" style="width: 60%; height: fit-content; top: 60%; left: 30%; min-width: unset;">
                 <p>
                     Using <em>photomatching</em> techniques, Vantage aims to make these complex methodologies
                     accessible to smaller research teams, enabling them to perform in-depth investigations with ease.
@@ -48,11 +52,19 @@
                     accessible and open-source.
                 </p>
             </div>
-            <div class="box" style="width: fit-content; height: fit-content; top: 80%; left: 30%; min-width: unset;">
+        </div>
+        <div class="pair">
+            <div class="box" style="width: fit-content; height: fit-content; top: 10%; left: 60%; min-width: unset;">
                 <p>You can follow its development
                     <a href="https://github.com/thometnanni/vantage">here</a>
                 </p>
             </div>
+            <div class="box" style="width: fit-content; height: fit-content; top: 25%; left: 10%; min-width: unset;">
+                <p>
+                    Or contact us via <a href="mailto:">email</a>.
+                </p>
+            </div>
+        </div>
 </body>
 
 </html>
