--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
             </div>
         </div>
         <div class="pair">
-            <div class="box" style="width: fit-content; height: fit-content; top: 10%; left: 60%; min-width: unset;">
+            <div class="box" style="width: fit-content; height: 25%; top: 0%; left: 60%; min-width: unset;">
                 <p>You can follow its development
                     <a href="https://github.com/thometnanni/vantage">here</a>
                 </p>
             </div>
-            <div class="box" style="width: fit-content; height: fit-content; top: 25%; left: 10%; min-width: unset;">
+            <div class="box" style="width: fit-content; height: 10%; top: 35%; left: 10%; min-width: unset;">
                 <p>
                     Or contact us via <a href="mailto:">email</a>.
                 </p>
