--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 
 <body>
     <div class="container" id="container">
+
         <div class="pair">
-            <div class="box" style="width: 20%; height: 30%; top: 2%; left: 2%; transform: rotate(0deg);">
+            <div class="box" style="width: 20%; height: 30%; top: 5%; left: 2%; transform: rotate(0deg);">
                 <p>Funded by <a href="https://prototypefund.de/project/vantage/" target="_blank"
                         rel="noopener noreferrer">Protoype Fund</a>, Vantage reconstructs
                     the spacial context of video recordings.</p>
             </div>
-            <div class="box animate-left" style="width: 50%; height: 60%; top: 35%; left: 40%;">
-                <img src="assets/img1.jpeg" alt="">
+            <div class="box animate-left" style="width: 50%; height: 55%; top: 40%; left: 30%;">
+                <video autoplay muted loop src="assets/vantage.webm"></video>
             </div>
         </div>
 
@@ -34,15 +35,15 @@
                     the wider spatial setting of videos.
                 </p>
             </div>
-            <div class="box animate-right" style="width: 40%; height: 40%; top: 55%; left: 20%;">
-                <img src="assets/img1.jpeg" alt="">
+            <div class="box animate-right" style="width: 20%; height: 40%; top: 55%; left: 20%;">
+                <img src="assets/img1.png" alt="">
             </div>
         </div>
         <div class="pair">
-            <div class="box animate-left" style="width: 30%; height: fit-content; left: 40%;">
-                <img src="assets/img1.jpeg" alt="">
+            <div class="box animate-left" style="width: 20%; height: 40%; left: 40%;">
+                <img src="assets/img5.png" alt="">
             </div>
-            <div class="box" style="width: 60%; height: fit-content; top: 60%; left: 30%; min-width: unset;">
+            <div class="box" style="width: 30%; height: fit-content; top: 60%; left: 30%; min-width: unset;">
                 <p>
                     Using <em>photomatching</em> techniques, Vantage aims to make these complex methodologies
                     accessible to smaller research teams, enabling them to perform in-depth investigations with ease.
@@ -54,17 +55,21 @@
             </div>
         </div>
         <div class="pair">
-            <div class="box" style="width: fit-content; height: 25%; top: 0%; left: 60%; min-width: unset;">
+            <div class="box animate-right" style="width: 15%; height: 25%; top: 0%; left: 10%; min-width: unset;">
+                <img src="assets/img3.png" alt="">
+            </div>
+            <div class="box" style="width: fit-content; height: fit-content; top: 35%; left: 10%; min-width: unset;">
                 <p>You can follow its development
                     <a href="https://github.com/thometnanni/vantage">here</a>
                 </p>
-            </div>
-            <div class="box" style="width: fit-content; height: 10%; top: 35%; left: 10%; min-width: unset;">
                 <p>
                     Or contact us via <a href="mailto:">email</a>.
                 </p>
             </div>
         </div>
+        <svg id="svgContainer"
+            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none;"></svg>
+
 </body>
 
 </html>
