--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
     <div class="container" id="container">
 
         <div class="pair">
-            <div class="box" style="width: 20%; height: 30%; top: 5%; left: 2%; transform: rotate(0deg);">
+            <div class="box" style="width: 20%; height: 30%;    transform: rotate(0deg);">
                 <p>Funded by <a href="https://prototypefund.de/project/vantage/" target="_blank"
                         rel="noopener noreferrer">Protoype Fund</a>, Vantage reconstructs
                     the spacial context of video recordings.</p>
             </div>
-            <div class="box animate-left" style="width: 50%; height: 55%; top: 40%; left: 30%;">
+            <div class="box animate-left" style="width: 50%; height: 55%; ">
                 <video autoplay muted loop src="assets/vantage.webm"></video>
             </div>
         </div>
 
         <div class="pair">
-            <div class="box" style="width: 20%; height: fit-content; left: 40%;">
+            <div class="box" style="width: 20%; height: fit-content;">
                 <p>It's a tool designed for OSINT practitioners, fact-checkers, and investigative journalists,
                     particularly
                     those working independently or in smaller teams.
@@ -35,15 +35,15 @@
                     the wider spatial setting of videos.
                 </p>
             </div>
-            <div class="box animate-right" style="width: 20%; height: 40%; top: 55%; left: 20%;">
+            <div class="box animate-right" style="width: 20%; height: 40%; ">
                 <img src="assets/img1.png" alt="">
             </div>
         </div>
         <div class="pair">
-            <div class="box animate-left" style="width: 20%; height: 40%; left: 40%;">
+            <div class="box animate-left" style="width: 20%; height: 40%;">
                 <img src="assets/img5.png" alt="">
             </div>
-            <div class="box" style="width: 30%; height: fit-content; top: 60%; left: 30%; min-width: unset;">
+            <div class="box" style="width: 30%; height: fit-content;    min-width: unset;">
                 <p>
                     Using <em>photomatching</em> techniques, Vantage aims to make these complex methodologies
                     accessible to smaller research teams, enabling them to perform in-depth investigations with ease.
@@ -55,10 +55,10 @@
             </div>
         </div>
         <div class="pair">
-            <div class="box animate-right" style="width: 15%; height: 25%; top: 0%; left: 10%; min-width: unset;">
+            <div class="box animate-right" style="width: 15%; height: 25%;    min-width: unset;">
                 <img src="assets/img3.png" alt="">
             </div>
-            <div class="box" style="width: fit-content; height: fit-content; top: 20%; left: 10%; min-width: unset;">
+            <div class="box" style="width: fit-content; height: fit-content;    min-width: unset;">
                 <p>You can follow its development
                     <a href="https://github.com/thometnanni/vantage">here</a>
                 </p>
@@ -68,7 +68,7 @@
             </div>
         </div>
         <svg id="svgContainer"
-            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none;"></svg>
+            style="position: absolute;  height: 100%; pointer-events: none;"></svg>
 
 </body>
 
