--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
     <div class="container" id="container">
 
         <div class="pair">
-            <div class="box" style="width: 20%; height: 30%;    transform: rotate(0deg);">
+            <div class="box" style="width: 20vw; height: fit-content; transform: rotate(0deg);">
                 <p>Funded by <a href="https://prototypefund.de/project/vantage/" target="_blank"
                         rel="noopener noreferrer">Protoype Fund</a>, Vantage reconstructs
                     the spacial context of video recordings.</p>
             </div>
-            <div class="box animate-left" style="width: 50%; height: 55%; ">
+            <div class="box animate-left" style="width: 30vw; height: 20vw;">
                 <video autoplay muted loop src="assets/vantage.webm"></video>
             </div>
         </div>
 
         <div class="pair">
-            <div class="box" style="width: 20%; height: fit-content;">
+            <div class="box" style="width: 20vw; margin-left: 20vw;">
                 <p>It's a tool designed for OSINT practitioners, fact-checkers, and investigative journalists,
                     particularly
                     those working independently or in smaller teams.
@@ -35,15 +35,12 @@
                     the wider spatial setting of videos.
                 </p>
             </div>
-            <div class="box animate-right" style="width: 20%; height: 40%; ">
+            <div class="box animate-right" style="width: 20vw; height: 20vw;">
                 <img src="assets/img1.png" alt="">
             </div>
         </div>
         <div class="pair">
-            <div class="box animate-left" style="width: 20%; height: 40%;">
-                <img src="assets/img5.png" alt="">
-            </div>
-            <div class="box" style="width: 30%; height: fit-content;    min-width: unset;">
+            <div class="box" style="width: 20vw; margin-left: 50vw;">
                 <p>
                     Using <em>photomatching</em> techniques, Vantage aims to make these complex methodologies
                     accessible to smaller research teams, enabling them to perform in-depth investigations with ease.
@@ -53,12 +50,15 @@
                     accessible and open-source.
                 </p>
             </div>
+            <div class="box animate-left" style="width: 20vw;">
+                <img src="assets/img5.png" alt="">
+            </div>
         </div>
         <div class="pair">
-            <div class="box animate-right" style="width: 15%; height: 25%;    min-width: unset;">
+            <div class="box animate-right" style="width: 15%; height: 25%;">
                 <img src="assets/img3.png" alt="">
             </div>
-            <div class="box" style="width: fit-content; height: fit-content;    min-width: unset;">
+            <div class="box" style="margin-left: 25vw; width: 20vw;">
                 <p>You can follow its development
                     <a href="https://github.com/thometnanni/vantage">here</a>
                 </p>
