chore cleaning css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container" id="container">
 
         <div class="pair">
-            <div class="box" style="width: 20vw; height: fit-content; transform: rotate(0deg);">
+            <div class="box" style="width: 20vw; height: fit-content;">
                 <p>Funded by <a href="https://prototypefund.de/project/vantage/" target="_blank"
                         rel="noopener noreferrer">Protoype Fund</a>, Vantage reconstructs
                     the spacial context of video recordings.</p>
