--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="pair">
             <div class="box" style="width: 20vw; height: fit-content;">
                 <p>Funded by <a href="https://prototypefund.de/project/vantage/" target="_blank"
-                        rel="noopener noreferrer">Protoype Fund</a>, Vantage reconstructs
+                        rel="noopener noreferrer">Prototype Fund</a>, Vantage reconstructs
                     the spacial context of video recordings.</p>
             </div>
             <div class="box animate-left" style="width: 30vw; height: 20vw;">
