--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </div>
 
         <div class="pair">
+
             <div class="box" style="width: 20vw; margin-left: 20vw;">
                 <p>It's a tool designed for OSINT practitioners, fact-checkers, and investigative journalists,
                     particularly
@@ -40,15 +41,22 @@
             </div>
         </div>
         <div class="pair">
-            <div class="box" style="width: 20vw; margin-left: 50vw;">
+            <div class="box" style="width: 30vw; margin-left: 50vw;">
                 <p>
                     Using <em>photomatching</em> techniques, Vantage aims to make these complex methodologies
                     accessible to smaller research teams, enabling them to perform in-depth investigations with ease.
+                </p>
+                <p>Vantage enables users to work seamlessly with 3D material, geospatial data, videos, and images. By
+                    projecting these visual elements onto dynamic 3D environments, researchers can reconstruct scenes
+                    and explore the
+                    spatial relationships within the footage.
+
                 </p>
                 <p>
                     The platform is a gateway to in-depth exploration, echoing forensic methodologies, yet freely
                     accessible and open-source.
                 </p>
+
             </div>
             <div class="box animate-left" style="width: 20vw;">
                 <img src="assets/img5.png" alt="">
@@ -59,16 +67,14 @@
                 <img src="assets/img3.png" alt="">
             </div>
             <div class="box" style="margin-left: 25vw; width: 20vw;">
-                <p>You can follow its development
+                <p>Follow its development
                     <a href="https://github.com/thometnanni/vantage">here</a>
-                </p>
-                <p>
-                    Or contact us via <a href="mailto:">email</a>.
+               <br>
+                    Or contact us <a href="mailto:">here</a> to learn more.
                 </p>
             </div>
         </div>
-        <svg id="svgContainer"
-            style="position: absolute;  height: 100%; pointer-events: none;"></svg>
+        <svg id="svgContainer" style="position: absolute;  height: 100%; pointer-events: none;"></svg>
 
 </body>
 
