--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
                         rel="noopener noreferrer">Prototype Fund</a>, Vantage reconstructs
                     the spacial context of video recordings.</p>
             </div>
-            <div class="box animate-left" style="width: 30vw; height: 20vw;">
+            <div class="box top animate-left" style="width: 30vw; height: 20vw;">
                 <video autoplay muted loop src="assets/vantage.webm"></video>
             </div>
         </div>
 
         <div class="pair">
 
-            <div class="box" style="width: 20vw; margin-left: 20vw;">
+            <div class="box  top" style="width: 20vw; margin-left: 20vw;">
                 <p>It's a tool designed for OSINT practitioners, fact-checkers, and investigative journalists,
                     particularly
                     those working independently or in smaller teams.
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div class="pair">
-            <div class="box" style="width: 30vw; margin-left: 50vw;">
+            <div class="box top" style="width: 30vw; margin-left: 50vw;">
                 <p>
                     Using <em>photomatching</em> techniques, Vantage aims to make these complex methodologies
                     accessible to smaller research teams, enabling them to perform in-depth investigations with ease.
@@ -66,7 +66,7 @@
             <div class="box animate-right" style="width: 15%; height: 25%;">
                 <img src="assets/img3.png" alt="">
             </div>
-            <div class="box" style="margin-left: 25vw; width: 20vw;">
+            <div class="box top" style="margin-left: 25vw; width: 20vw;">
                 <p>Follow its development
                     <a href="https://github.com/thometnanni/vantage">here</a>
                <br>
