--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <p>Follow its development
                     <a href="https://github.com/thometnanni/vantage">here</a>
                <br>
-                    Or contact us <a href="mailto:">here</a> to learn more.
+                    Or contact us <a href="mailto:thometnanni@protonmail.com">here</a> to learn more.
                 </p>
             </div>
         </div>
