--- a/index.html
+++ b/index.html
@@ -19,63 +19,42 @@
                         rel="noopener noreferrer">Prototype Fund</a>, Vantage reconstructs
                     the spacial context of video recordings.</p>
             </div>
-            <div class="box top animate-left" style="width: 30vw; height: 20vw;">
+            <div class="box top animate-left" style="width: 60vw; height: 30vw;">
                 <video autoplay muted loop src="assets/vantage.webm"></video>
             </div>
         </div>
 
-        <div class="pair">
-
-            <div class="box  top" style="width: 20vw; margin-left: 20vw;">
-                <p>It's a tool designed for OSINT practitioners, fact-checkers, and investigative journalists,
+        <div class="info">
+            <div>
+                <p>Vantage is a tool designed forfact-checkers, investigative journalists and OSINT practitioners,
                     particularly
                     those working independently or in smaller teams.
                 </p>
-                <p>
-                    Vantage makes it easier to analyze and understand
-                    the wider spatial setting of videos.
-                </p>
-            </div>
-            <div class="box animate-right" style="width: 20vw; height: 20vw;">
-                <img src="assets/img1.png" alt="">
-            </div>
-        </div>
-        <div class="pair">
-            <div class="box top" style="width: 30vw; margin-left: 50vw;">
-                <p>
-                    Using <em>photomatching</em> techniques, Vantage aims to make these complex methodologies
-                    accessible to smaller research teams, enabling them to perform in-depth investigations with ease.
-                </p>
-                <p>Vantage enables users to work seamlessly with 3D material, geospatial data, videos, and images. By
-                    projecting these visual elements onto dynamic 3D environments, researchers can reconstruct scenes
-                    and explore the
-                    spatial relationships within the footage.
 
+            </div>
+            <div>
+                <p>
+                    It leverages <em>photomatching</em> techniques to handle 3D material, geospatial data, videos, and
+                    images directly within a web-based platform.
+                </p>
+                <p>
+                    By projecting these elements onto dynamic 3D environments, Vantage allows researchers to reconstruct
+                    scenes and analyze spatial relationships within footage.
                 </p>
                 <p>
                     The platform is a gateway to in-depth exploration, echoing forensic methodologies, yet freely
                     accessible and open-source.
                 </p>
-
             </div>
-            <div class="box animate-left" style="width: 20vw;">
-                <img src="assets/img5.png" alt="">
-            </div>
-        </div>
-        <div class="pair">
-            <div class="box animate-right" style="width: 15%; height: 25%;">
-                <img src="assets/img3.png" alt="">
-            </div>
-            <div class="box top" style="margin-left: 25vw; width: 20vw;">
+            <div>
                 <p>Follow its development
                     <a href="https://github.com/thometnanni/vantage">here</a>
-               <br>
+                    <br>
                     Or contact us <a href="mailto:thometnanni@protonmail.com">here</a> to learn more.
                 </p>
             </div>
         </div>
         <svg id="svgContainer" style="position: absolute;  height: 100%; pointer-events: none;"></svg>
-
 </body>
 
 </html>
