comma in place, rhythm with grace

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <div>
                 <p>Follow its development
-                    <a href="https://github.com/thometnanni/vantage">here</a>
+                    <a href="https://github.com/thometnanni/vantage">here</a>,
                     <br>
                     Or contact us <a href="mailto:thometnanni@protonmail.com">here</a> to learn more.
                 </p>
