background bright, turned to white

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                     By projecting these elements onto dynamic 3D environments, Vantage allows researchers to reconstruct
                     scenes and analyze spatial relationships within footage.
                 </p>
+
+            </div>
+            <div>
                 <p>
                     The platform is a gateway to in-depth exploration, echoing forensic methodologies, yet freely
                     accessible and open-source.
