--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vantage</title>
     <link rel="stylesheet" href="/style.css">
-    <script rel="preload" type="module" src="/index.js" defer></script>
+    <script type="module" src="/index.js" defer></script>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.png">
 </head>
 
