new text and font

--- a/index.html
+++ b/index.html
@@ -44,24 +44,34 @@
 
         <div class="info">
             <div>
-                <p>Vantage is a tool designed for fact-checkers, investigative journalists and OSINT practitioners,
-                    particularly those working independently or in smaller teams.</p>
+                <p><strong>Vantage</strong> is a tool designed for <strong>fact-checkers, investigative
+                        journalists,</strong> and <strong>Open Source Intelligence (OSINT)
+                    </strong> practitioners – particularly those working
+                    independently or
+                    in
+                    smaller teams.</p>
             </div>
             <div>
-                <p>It leverages <em>photomatching</em> techniques to handle 3D material, geospatial data, videos, and
-                    images directly within a web-based platform.</p>
-                <p>By projecting these elements onto dynamic 3D environments, Vantage allows researchers to reconstruct
-                    scenes and analyze spatial relationships within footage.</p>
+                <p>It combines <em>photomatching</em> with support for geospatial data, videos, images, and other visual
+                    materials, allowing researchers to verify content, reconstruct events, and gain new insights—all
+                    within a unified, web-based platform.</p>
+                <p>The platform projects these elements onto <strong>3D environments</strong>, enabling accurate scene
+                    reconstructions, spatial analysis, and the ability to <strong>compare multiple viewpoints in a
+                        unified environment</strong>.</p>
             </div>
             <div>
-                <p>The platform is a gateway to in-depth exploration, echoing forensic methodologies, yet freely
-                    accessible and open-source.</p>
+                <p><strong>Vantage is open-source and freely accessible</strong>, ensuring that investigative
+                    tools are within reach for everyone, regardless of resources.</p>
             </div>
             <div>
-                <p>Follow its development <a href="https://github.com/thometnanni/vantage">here</a>,<br>Or contact us <a
-                        href="mailto:thometnanni@protonmail.com">here</a> to learn more.</p>
+                <p>Contact us <a href="mailto:thometnanni@protonmail.com"><strong>@here</strong></a> for more
+                    information, or follow our development on <a
+                        href="https://github.com/thometnanni/vantage"><strong>GitHub</strong></a>.</p>
             </div>
         </div>
+
+
+
     </div>
 </body>
 
