--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                     smaller teams.</p>
             </div>
             <div>
-                <p>It combines <em>photomatching</em> with support for geospatial data, videos and images, allowing researchers to verify content, reconstruct events, and gain new insights—all
+                <p>It combines <em>photomatching</em> with support for geospatial data, videos and images, allowing
+                    researchers to verify content, reconstruct events, and gain new insights—all
                     within a, web-based platform.</p>
                 <p>The platform projects these elements onto <strong>3D environments</strong>, enabling accurate scene
                     reconstructions, spatial analysis, and the ability to <strong>compare multiple viewpoints in a
@@ -63,9 +64,14 @@
                     tools are within reach for everyone, regardless of resources.</p>
             </div>
             <div>
-                <p>Contact us <a href="mailto:thometnanni@protonmail.com"><strong>@here</strong></a> for more
-                    information, or follow our development on <a
-                        href="https://github.com/thometnanni/vantage"><strong>GitHub</strong></a>.</p>
+                <p><a class="link" href="mailto:thometnanni@protonmail.com">Write us</a> for
+                    more
+                    information, or follow our development on <a class="link"
+                        href="https://github.com/thometnanni/vantage">GitHub</a>.</p>
+                <p>
+                    <a class="link" href="https://fidel.computer/">Fidel Thomet</a> &
+                    <a class="link" href="https://giacomo.website/">Giacomo Nanni</a>
+                </p>
             </div>
         </div>
     </div>
