--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <p>It combines <em>photomatching</em> with support for geospatial data, videos and images, allowing
                     researchers to verify content, reconstruct events, and gain new insights—all
                     within a, web-based platform.</p>
-                <p>The platform projects these elements onto <strong>3D environments</strong>, enabling accurate scene
+                <p>The platform allows to project these elements onto <strong>3D environments</strong>, enabling accurate scene
                     reconstructions, spatial analysis, and the ability to <strong>compare multiple viewpoints in a
                         unified environment</strong>.</p>
             </div>
