--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="/style.css">
     <script type="module" src="/index.js" defer></script>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.png">
+
+    <meta name="title" content="Vantage" />
+    <meta name="description" content="Funded by Prototype Fund, Vantage reconstructs the spatial context of video recordings." />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://vantage.thometnanni.net/" />
+    <meta property="og:title" content="Vantage" />
+    <meta property="og:description" content="Funded by Prototype Fund, Vantage reconstructs the spatial context of video recordings." />
+    <meta property="og:image" content="assets/cover.png" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://vantage.thometnanni.net/" />
+    <meta property="twitter:title" content="Vantage" />
+    <meta property="twitter:description" content="Funded by Prototype Fund, Vantage reconstructs the spatial context of video recordings." />
+    <meta property="twitter:image" content="assets/cover.png" />
 </head>
 
 <body>
@@ -55,7 +70,8 @@
                 <p>It combines <em>photomatching</em> with support for geospatial data, videos and images, allowing
                     researchers to verify content, reconstruct events, and gain new insights—all
                     within a, web-based platform.</p>
-                <p>The platform allows to project these elements onto <strong>3D environments</strong>, enabling accurate scene
+                <p>The platform allows to project these elements onto <strong>3D environments</strong>, enabling
+                    accurate scene
                     reconstructions, spatial analysis, and the ability to <strong>compare multiple viewpoints in a
                         unified environment</strong>.</p>
             </div>
