--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vantage</title>
     <link rel="stylesheet" href="/style.css">
     <script type="module" src="/index.js" defer></script>
-    <link rel="icon" type="image/x-icon" href="/assets/favicon.png">
+    <link rel="icon" type="image/x-icon" href="assets/favicon.png">
 
     <meta name="title" content="Vantage" />
     <meta name="description" content="Funded by Prototype Fund, Vantage reconstructs the spatial context of video recordings." />
@@ -16,13 +16,13 @@
     <meta property="og:url" content="https://vantage.thometnanni.net/" />
     <meta property="og:title" content="Vantage" />
     <meta property="og:description" content="Funded by Prototype Fund, Vantage reconstructs the spatial context of video recordings." />
-    <meta property="og:image" content="/assets/cover.png" />
+    <meta property="og:image" content="./assets/cover.jpg" />
 
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://vantage.thometnanni.net/" />
     <meta property="twitter:title" content="Vantage" />
     <meta property="twitter:description" content="Funded by Prototype Fund, Vantage reconstructs the spatial context of video recordings." />
-    <meta property="twitter:image" content="/assets/cover.png" />
+    <meta property="twitter:image" content="./assets/cover.jpg" />
 </head>
 
 <body>
