--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
                         unified environment</strong>.</p>
             </div>
             <div>
-                <p><strong>Vantage is open-source and freely accessible</strong>, ensuring that investigative
+                <p> Funded by <a class="link" href="https://prototypefund.de/project/vantage/" target="_blank"
+                        rel="noopener noreferrer">Prototype Fund</a>,<strong>
+                        Vantage is open-source and freely accessible</strong>,
+                    ensuring that investigative
                     tools are within reach for everyone, regardless of resources.</p>
             </div>
             <div>
@@ -89,8 +92,6 @@
                     <a class="link" href="https://giacomo.website/">Giacomo Nanni</a>
                 </p>
             </div>
-            <div>Funded by <a href="https://prototypefund.de/project/vantage/" target="_blank"
-                    rel="noopener noreferrer">Prototype Fund</a></div>
         </div>
     </div>
 </body>
