--- a/index.html
+++ b/index.html
@@ -10,31 +10,32 @@
     <link rel="icon" type="image/x-icon" href="assets/favicon.png">
 
     <meta name="title" content="Vantage" />
-    <meta name="description" content="Funded by Prototype Fund, Vantage reconstructs the spatial context of video recordings." />
+    <meta name="description" content="Vantage reconstructs the spatial context of video recordings." />
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://vantage.thometnanni.net/" />
     <meta property="og:title" content="Vantage" />
-    <meta property="og:description" content="Funded by Prototype Fund, Vantage reconstructs the spatial context of video recordings." />
+    <meta property="og:description" content="Vantage reconstructs the spatial context of video recordings." />
     <meta property="og:image" content="./assets/cover.jpg" />
 
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://vantage.thometnanni.net/" />
     <meta property="twitter:title" content="Vantage" />
-    <meta property="twitter:description" content="Funded by Prototype Fund, Vantage reconstructs the spatial context of video recordings." />
+    <meta property="twitter:description" content="Vantage reconstructs the spatial context of video recordings." />
     <meta property="twitter:image" content="./assets/cover.jpg" />
 </head>
 
 <body>
     <div class="container" id="container">
         <div class="overlay overlay-video">
-            <video autoplay loop muted src="assets/vantage.webm"></video>
+            <!-- <img src="/assets/vantage.png" alt=""> -->
+            <video autoplay loop muted src="assets/demo.mp4"></video>
+            <a class="prototype-url" href="https://thometnanni.github.io/vantage-renderer/" target="_blank">Check the first prototype</a>
         </div>
 
         <div class="overlay overlay-text">
             <p>
-                Funded by <a href="https://prototypefund.de/project/vantage/" target="_blank"
-                    rel="noopener noreferrer">Prototype Fund</a>, Vantage reconstructs the spatial
+                Vantage reconstructs the spatial
                 context of video recordings.
             </p>
         </div>
@@ -76,7 +77,10 @@
                         unified environment</strong>.</p>
             </div>
             <div>
-                <p><strong>Vantage is open-source and freely accessible</strong>, ensuring that investigative
+                <p> Funded by <a class="link" href="https://prototypefund.de/project/vantage/" target="_blank"
+                        rel="noopener noreferrer">Prototype Fund</a>,<strong>
+                        Vantage is open-source and freely accessible</strong>,
+                    ensuring that investigative
                     tools are within reach for everyone, regardless of resources.</p>
             </div>
             <div>
