--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="overlay overlay-video">
             <!-- <img src="/assets/vantage.png" alt=""> -->
             <video autoplay loop muted src="./assets/demo-Bj-_lY6I.mp4"></video>
-            <a class="prototype-url" href="https://thometnanni.github.io/vantage/" target="_blank">Check the first prototype</a>
+            <a class="prototype-url" href="https://thometnanni.github.io/vantage-renderer/" target="_blank">Check the first prototype</a>
         </div>
 
         <div class="overlay overlay-text">
