--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <div class="overlay overlay-video">
             <!-- <img src="/assets/vantage.png" alt=""> -->
             <video autoplay loop muted src="./assets/demo-Bj-_lY6I.mp4"></video>
-            <a class="prototype-url" href="https://thometnanni.github.io/vantage-renderer/" target="_blank">Check the first prototype</a>
+            <a class="prototype-url" href="https://thometnanni.github.io/vantage-renderer/" target="_blank">Check the
+                first prototype</a>
         </div>
 
         <div class="overlay overlay-text">
@@ -69,8 +70,10 @@
             </div>
             <div>
                 <p>It combines <em>photomatching</em> with support for geospatial data, videos and images, allowing
-                    researchers to verify content, reconstruct events, and gain new insights—all
-                    within a, web-based platform.</p>
+                    users to verify content, reconstruct events and uncover alternative perspectives to better
+                    understand footage and
+                    situating evidence.
+                </p>
                 <p>The platform allows to project these elements onto <strong>3D environments</strong>, enabling
                     accurate scene
                     reconstructions, spatial analysis, and the ability to <strong>compare multiple viewpoints in a
