--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
             </div>
             <div>
                 <p>It combines <em>photomatching</em> with support for geospatial data, videos and images, allowing
-                    users to verify content, reconstruct events and uncover alternative perspectives to better
-                    understand footage and
-                    situating evidence.
+                    users to verify content, reconstruct events and uncover alternative perspectives to situate evidence.
                 </p>
                 <p>The platform allows to project these elements onto <strong>3D environments</strong>, enabling
                     accurate scene
