--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         rel="noopener noreferrer">Prototype Fund</a>,<strong>
                         Vantage is open-source and freely accessible</strong>,
                     ensuring that investigative
-                    tools are within reach for everyone, regardless of resources.</p>
+                    tools are within reach for everyone.</p>
                 <p><a class="link" href="mailto:thometnanni@protonmail.com">Write us</a> for
                     more
                     information, or follow our development on <a class="link"
