--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="info">
             <div>
                 <p><strong>Vantage</strong> is a tool designed for <strong>fact-checkers, investigative
-                        journalists,</strong> and <strong>Open Source Intelligence (OSINT)
+                        journalists,</strong> and <strong>Open Source Intelligence
                     </strong> practitioners – particularly those working
                     independently or
                     in
