--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="info">
             <div>
                 <p><strong>Vantage</strong> is a tool designed for <strong>fact-checkers, investigative
-                        journalists,</strong> and <strong>Open Source Intelligence (OSINT)
+                        journalists,</strong> and <strong>Open Source Intelligence
                     </strong> practitioners – particularly those working
                     independently or
                     in
@@ -122,7 +122,7 @@
                         rel="noopener noreferrer">Prototype Fund</a>,<strong>
                         Vantage is open-source and freely accessible</strong>,
                     ensuring that investigative
-                    tools are within reach for everyone, regardless of resources.</p>
+                    tools are within reach for everyone.</p>
                 <p><a class="link" href="mailto:thometnanni@protonmail.com">Write us</a> for
                     more
                     information, or follow our development on <a class="link"
