--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
             <div>
                 <h4>Stories</h4>
                 <p>
-                    In addition to scene reconstruction,<strong> Vantage integrates spatial analysis with
-                        presentation</strong>.
+                    In addition to scene reconstructionVantage integrates spatial analysis with
+                    presentation.
                 </p>
 
                 <p>
@@ -113,7 +113,7 @@
                 </p>
 
                 <p>
-                    In addition, Vantage supports interactive exploration,
+                    Vantage supports interactive exploration,
                     allowing the audience to interact directly with scenes for deeper exploration.
                 </p>
             </div>
