--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div>
                 <h4>Stories</h4>
                 <p>
-                    In addition to scene reconstructionVantage integrates spatial analysis with
+                    In addition to scene reconstruction, Vantage integrates spatial analysis with
                     presentation.
                 </p>
 
