--- a/index.html
+++ b/index.html
@@ -79,17 +79,13 @@
 
                 <ol>
                     <li>
-                        Start by
-                        defining a location,
-                        which generates a 3D environment using OpenStreetMap data. Alternatively, users can import their
-                        own
-                        3D scenes.
+                        It starts by defining a location, which generates a 3D environment using OpenStreetMap data.
+                        Alternatively, users can import their own 3D scenes.
                     </li>
 
                     <li>
-                        Videos and images are then integrated and aligned by positioning
-                        cameras to match
-                        real-world perspectives.
+                        Videos and images are then integrated and aligned by positioning cameras to match real-world
+                        perspectives.
                     </li>
 
                     <li>
@@ -103,8 +99,7 @@
             <div>
                 <h4>Stories</h4>
                 <p>
-                    In addition to scene reconstruction, Vantage integrates spatial analysis with
-                    presentation.
+                    In addition to reconstructing the scene, Vantage integrates spatial analysis with presentation.
                 </p>
 
                 <p>
