--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                     smaller teams.</p>
             </div>
             <div>
-                <h4>Investigations</h4>
-                <p>The platform combines <em>photomatching</em> with support for geospatial data, videos and images,
+                <!-- <h4>Investigations</h4> -->
+                <p>The platform combines photomatching with support for geospatial data, videos and images,
                     allowing users to verify content, reconstruct events and situate evidence.
                 </p>
                 <p>By projecting these elements onto 3D environments, Vantage facilitates accurate scene
@@ -79,17 +79,13 @@
 
                 <ol>
                     <li>
-                        Start by
-                        defining a location,
-                        which generates a 3D environment using OpenStreetMap data. Alternatively, users can import their
-                        own
-                        3D scenes.
+                        It starts by defining a location, which generates a 3D environment using OpenStreetMap data.
+                        Alternatively, users can import their own 3D scenes.
                     </li>
 
                     <li>
-                        Videos and images are then integrated and aligned by positioning
-                        cameras to match
-                        real-world perspectives.
+                        Videos and images are then integrated and aligned by positioning cameras to match real-world
+                        perspectives.
                     </li>
 
                     <li>
@@ -101,10 +97,9 @@
                 </p>
             </div>
             <div>
-                <h4>Stories</h4>
+                <!-- <h4>Stories</h4> -->
                 <p>
-                    In addition to scene reconstruction,<strong> Vantage integrates spatial analysis with
-                        presentation</strong>.
+                    In addition to reconstructing the scene, Vantage integrates spatial analysis with presentation.
                 </p>
 
                 <p>
@@ -113,7 +108,7 @@
                 </p>
 
                 <p>
-                    In addition, Vantage supports interactive exploration,
+                    Vantage supports interactive exploration,
                     allowing the audience to interact directly with scenes for deeper exploration.
                 </p>
             </div>
@@ -131,8 +126,20 @@
                     <a class="link" href="https://fidel.computer/">Fidel Thomet</a> &
                     <a class="link" href="https://giacomo.website/">Giacomo Nanni</a>
                 </p>
+
             </div>
         </div>
+        <div class="info" style="padding: 20px 0;">
+            <div style="margin: 0 auto; vertical-align: middle;">
+                <img src="/assets/bmbf.svg" alt=""
+                    style="max-width: 32%; height: 100px; object-fit: contain; vertical-align: middle; ">
+                <img src="/assets/pf.svg" alt=""
+                    style="max-width: 32%; height: 100px; object-fit: contain; vertical-align: middle;">
+                <img src="/assets/openc.svg" alt=""
+                    style="max-width: 32%; height: 100px; object-fit: contain; vertical-align: middle;">
+            </div>
+        </div>
+
     </div>
 </body>
 
