--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
         <div class="info" style="padding: 20px 0;">
             <div style="margin: 0 auto; vertical-align: middle;">
                 <img src="/assets/bmbf.svg" alt=""
-                    style="max-width: 32%; height: 100px; object-fit: contain; vertical-align: middle; ">
+                    style="max-width: 32%; max-height: 150px; object-fit: contain; vertical-align: middle; ">
                 <img src="/assets/pf.svg" alt=""
-                    style="max-width: 32%; height: 100px; object-fit: contain; vertical-align: middle;">
+                    style="max-width: 32%; max-height: 150px; object-fit: contain; vertical-align: middle;">
                 <img src="/assets/openc.svg" alt=""
-                    style="max-width: 32%; height: 100px; object-fit: contain; vertical-align: middle;">
+                    style="max-width: 32%; max-height: 150px; object-fit: contain; vertical-align: middle;">
             </div>
         </div>
 
