--- a/index.html
+++ b/index.html
@@ -129,17 +129,17 @@
 
             </div>
         </div>
-        <div class="info" style="padding: 20px 0;">
-            <div style="margin: 0 auto; vertical-align: middle;">
+        <div class="info" style="padding: 20px 0; overflow-x: auto;">
+            <div
+                style="padding: 0 10px; margin: 0 auto; align-items: center; display: flex; gap: 25px; white-space: nowrap;">
                 <img src="/assets/bmbf.svg" alt=""
-                    style="max-width: 32%; max-height: 150px; object-fit: contain; vertical-align: middle; ">
+                    style="max-width: 30%; max-height: 150px; object-fit: contain; flex-shrink: 0;">
                 <img src="/assets/pf.svg" alt=""
-                    style="max-width: 32%; max-height: 150px; object-fit: contain; vertical-align: middle;">
+                    style="max-width: 30%; max-height: 150px; object-fit: contain; flex-shrink: 0;">
                 <img src="/assets/openc.svg" alt=""
-                    style="max-width: 32%; max-height: 150px; object-fit: contain; vertical-align: middle;">
+                    style="max-width: 30%; max-height: 150px; object-fit: contain; flex-shrink: 0;">
             </div>
         </div>
-
     </div>
 </body>
 
