--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         Vantage is open-source and freely accessible</strong>,
                     ensuring that investigative
                     tools are within reach for everyone.</p>
-                <p><a class="link" href="mailto:thometnanni@protonmail.com">Write us</a> for
+                <p><a class="link" href="mailto:hi@thometnanni.net">Write us</a> for
                     more
                     information, or follow our development on <a class="link"
                         href="https://github.com/thometnanni/vantage">GitHub</a>.</p>
