--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="container" id="container">
         <div class="overlay overlay-video">
             <!-- <img src="/assets/vantage.png" alt=""> -->
-            <video autoplay loop muted src="./assets/demo-Bj-_lY6I.mp4"></video>
+            <video autoplay loop muted src="./assets/demo-BjqjBr6f.mp4"></video>
             <a class="prototype-url" href="https://thometnanni.github.io/vantage-renderer/" target="_blank">Check the
                 first prototype</a>
         </div>
