--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="overlay overlay-video">
             <!-- <img src="/assets/vantage.png" alt=""> -->
             <video autoplay loop muted src="assets/demo.mp4"></video>
-            <a class="prototype-url" href="https://thometnanni.github.io/vantage-renderer/" target="_blank">Prototype</a>
+            <a class="prototype-url" href="https://thometnanni.github.io/vantage-renderer/" target="_blank">view a prototype</a>
             <a class="prototype-url" href="mailto:hi@thometnanni.net" target="_blank">request a demo</a>
 
         </div>
