--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </p>
                 <p>By projecting these elements onto 3D environments, Vantage facilitates accurate scene
                     reconstructions, spatial analysis, and the comparison of multiple viewpoints within a unified
-                    framework:</p>
+                    framework.</p>
 
                 <!-- <ol>
                     <li>
