--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.png" />
     <meta name="title" content="Vantage" />
     <meta name="description" content="Vantage reconstructs the spatial context of video recordings." />
     
-		<link href="./_app/immutable/assets/0.Dg9bhQG1.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.B-wU069N.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.9e_zEQBr.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D089WpXC.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/VCfIxBZY.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Cyokv1G5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CBOpy2fL.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C9FWihKz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BP7RbBvP.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CkkFgVGb.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CdLfDAb4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Yzwz9Dcx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BArpSiJ7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BvFvupHY.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DtbpVpfi.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DYSV7gde.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/0waum1Sv.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.Ch9T7Mic.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BY7w2Zq6.js"><!--1uha8ag--><meta name="description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="og:title" content="Vantage"/> <meta property="og:description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="og:image" content="/cover.jpg"/> <meta property="twitter:card" content="summary_large_image"/> <meta property="twitter:title" content="Vantage"/> <meta property="twitter:description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="twitter:image" content="/cover.jpg"/><!----><title>Vantage</title>
@@ -43,15 +43,15 @@
 			
 			<script>
 				{
-					__sveltekit_u371x6 = {
+					__sveltekit_16t09v5 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D089WpXC.js"),
-						import("./_app/immutable/entry/app.CkkFgVGb.js")
+						import("./_app/immutable/entry/start.Cyokv1G5.js"),
+						import("./_app/immutable/entry/app.CdLfDAb4.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
