--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     
 		<link href="./_app/immutable/assets/0.B-wU069N.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.9e_zEQBr.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CWggJ7Pn.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C45ZWEa1.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.D7_riIPW.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DwD8CGpY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C9FWihKz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BP7RbBvP.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Cw8MNN4A.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.SuY3rpCw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Yzwz9Dcx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BArpSiJ7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BvFvupHY.js">
@@ -43,15 +43,15 @@
 			
 			<script>
 				{
-					__sveltekit_1s35d80 = {
+					__sveltekit_1q98tnc = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CWggJ7Pn.js"),
-						import("./_app/immutable/entry/app.Cw8MNN4A.js")
+						import("./_app/immutable/entry/start.D7_riIPW.js"),
+						import("./_app/immutable/entry/app.SuY3rpCw.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
